version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Graphics/ViewOptions.rst.txt
.. vale off



:class:`ViewOptions`
====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Graphics.ViewOptions

   Bases: :py:obj:`object`



.. py:currentmodule:: ViewOptions

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~RescaleAnnotations`
            - Rescale size of annotation following a zoom in or zoom out of the model.
          * - :py:attr:`~Reset`
            - Reset method.
          * - :py:attr:`~ZoomToWeld`
            - Zoom to the bodies that are affected by the Weld object.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnnotationPreferences`
            - AnnotationPreferences property.
          * - :py:attr:`~ClusteredVertexTolerance`
            - Sets the clustered vertices custom tolerance value.
          * - :py:attr:`~DisplayGraphOverlay`
            - Display Graph overlay in the current viewport.
          * - :py:attr:`~ModelColoring`
            - Sets the Model display Coloring.
          * - :py:attr:`~ModelDisplay`
            - Sets the model display option.
          * - :py:attr:`~ResultPreference`
            - ResultPreference property.
          * - :py:attr:`~SeamWeldReview`
            - Activate Seam Weld review mode.
          * - :py:attr:`~ShowBeamThickness`
            - Displays the thickness of beams.
          * - :py:attr:`~ShowBoundingMeshEdges`
            - ShowBoundingMeshEdges property.
          * - :py:attr:`~ShowClusteredVertices`
            - Displays all closely clustered vertices of the model.
          * - :py:attr:`~ShowCoordinateSystems`
            - Displays all coordinate system defined.
          * - :py:attr:`~ShowEdgeDirection`
            - Displays the edge direction arrow.
          * - :py:attr:`~ShowLegend`
            - Displays the legend.
          * - :py:attr:`~ShowLogo`
            - Displays the logo. The logo is always shown when using an academic license.
          * - :py:attr:`~ShowMesh`
            - Display the model's mesh.
          * - :py:attr:`~ShowMeshConnection`
            - Displays edge connection using a color scheme based on the mesh connection information.
          * - :py:attr:`~ShowRandomColors`
            - Sets random colors for each object of the application.
          * - :py:attr:`~ShowRemotePointConnections`
            - Displays the Remote Point Connections.
          * - :py:attr:`~ShowResultVectors`
            - Displays the result vectors.
          * - :py:attr:`~ShowRuler`
            - Displays the ruler.
          * - :py:attr:`~ShowSPHExpansion`
            - Displays the expansion for SPH elements.
          * - :py:attr:`~ShowShellThickness`
            - Displays the thickness of shells.
          * - :py:attr:`~ShowThickEdgeScoping`
            - Thicken the display of edge scoping.
          * - :py:attr:`~ShowTriad`
            - Displays the triad.
          * - :py:attr:`~ShowVertices`
            - Display all the vertices of the model.
          * - :py:attr:`~VectorDisplay`
            - VectorDisplay property.







Property detail
---------------
.. py:property:: AnnotationPreferences
   :type: Optional[Ansys.Mechanical.Graphics.AnnotationPreferences]


   
   AnnotationPreferences property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ClusteredVertexTolerance
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Sets the clustered vertices custom tolerance value.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplayGraphOverlay
   :type: Optional[bool]


   
   Display Graph overlay in the current viewport.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModelColoring
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ModelColoring]


   
   Sets the Model display Coloring.
















   ..
       !! processed by numpydoc !!

.. py:property:: ModelDisplay
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ModelDisplay]


   
   Sets the model display option.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultPreference
   :type: Optional[Ansys.Mechanical.Graphics.ResultPreference]


   
   ResultPreference property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SeamWeldReview
   :type: Optional[bool]


   
   Activate Seam Weld review mode.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowBeamThickness
   :type: Optional[bool]


   
   Displays the thickness of beams.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowBoundingMeshEdges
   :type: Optional[bool]


   
   ShowBoundingMeshEdges property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowClusteredVertices
   :type: Optional[bool]


   
   Displays all closely clustered vertices of the model.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowCoordinateSystems
   :type: Optional[bool]


   
   Displays all coordinate system defined.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowEdgeDirection
   :type: Optional[bool]


   
   Displays the edge direction arrow.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowLegend
   :type: Optional[bool]


   
   Displays the legend.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowLogo
   :type: Optional[bool]


   
   Displays the logo. The logo is always shown when using an academic license.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowMesh
   :type: Optional[bool]


   
   Display the model's mesh.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowMeshConnection
   :type: Optional[bool]


   
   Displays edge connection using a color scheme based on the mesh connection information.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowRandomColors
   :type: Optional[bool]


   
   Sets random colors for each object of the application.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowRemotePointConnections
   :type: Optional[bool]


   
   Displays the Remote Point Connections.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowResultVectors
   :type: Optional[bool]


   
   Displays the result vectors.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowRuler
   :type: Optional[bool]


   
   Displays the ruler.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowSPHExpansion
   :type: Optional[bool]


   
   Displays the expansion for SPH elements.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowShellThickness
   :type: Optional[bool]


   
   Displays the thickness of shells.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowThickEdgeScoping
   :type: Optional[bool]


   
   Thicken the display of edge scoping.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowTriad
   :type: Optional[bool]


   
   Displays the triad.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowVertices
   :type: Optional[bool]


   
   Display all the vertices of the model.
















   ..
       !! processed by numpydoc !!

.. py:property:: VectorDisplay
   :type: Optional[Ansys.Mechanical.Graphics.VectorDisplay]


   
   VectorDisplay property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: RescaleAnnotations() -> None

   
   Rescale size of annotation following a zoom in or zoom out of the model.

   ..
       !! processed by numpydoc !!

.. py:method:: Reset() -> None

   
   Reset method.

   ..
       !! processed by numpydoc !!

.. py:method:: ZoomToWeld() -> None

   
   Zoom to the bodies that are affected by the Weld object.

   ..
       !! processed by numpydoc !!



.. vale on